--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "@vercel/analytics": "^1.5.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
